--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -143,7 +143,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title"><i class="fa fa-user-plus modal-fa-icon"></i> Add Client</h4>
+                    <h4 class="modal-title" ng-if="!isEdit"><i class="fa fa-user-plus modal-fa-icon"></i> Add Client</h4>
+                    <h4 class="modal-title" ng-if="isEdit"><i class="fa fa-user-plus modal-fa-icon"></i> Edit Client</h4>
                 </div>
                 <div class="modal-body">
                      <div class="row">
@@ -236,7 +237,7 @@
                      </div><!--row-->
                 </div>
                 <div class="modal-footer">
-                    <div class="row">
+                    <div class="row" ng-if="!isEdit">
                         <div class="col-md-6">
                             <div class="input-group">
                                 <div class="checkbox checkbox-primary mt-5 mb-5">
@@ -249,6 +250,11 @@
                             <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary" ng-click="createClient(null)">Save</button>
                         </div>
+                    </div>
+                     <div ng-if="isEdit">
+                        <a class="f-left mt-5" data-toggle="modal" data-target="#delete"><small>Delete Account</small></a>
+                        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" ng-click="createClient(oldclient)">Save</button>
                     </div>
                 </div>
             </div>
@@ -296,6 +302,24 @@
                    <p class="modal-content-center m-0"></p>
                 </div>
                 
+            </div>
+        </div>
+    </div> 
+ <!--modal delete-->
+    <div class="modal inmodal fade" id="delete" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title"><i class="fa fa-trash modal-fa-icon"></i> Delete</h4>
+                </div>
+                <div class="modal-body">
+                   <p class="modal-content-center m-0">Do you really want to delete it?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" ng-click="deleteClient(oldclient)">Delete</button>
+                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div> 
