add create, update,list and delete customer user

--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -80,7 +80,7 @@
                     </li>
 
                     <li ng-if="doDisplay('/cuser')">
-                        <a href="user-fxw.html"><i class="fa fa-users"></i> <span class="nav-label">User</span></a>
+                        <a href="#/cuser"><i class="fa fa-users"></i> <span class="nav-label">User</span></a>
                     </li>
 
                     <li ng-if="doDisplay('/report')">
