--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -14,7 +14,7 @@
                 <div class="form-group">
                     <input type="password" class="form-control" placeholder="Password" required="" ng-model="password">
                 </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
+                <button type="submit" class="btn btn-primary block full-width m-b" id="loginbtn">Login</button>
                 <div class="errormsg">{{errors}}</div>
 
                 <a href="forgot-password-fxw.html"><small>Forgot password?</small></a>
